# Yuki

./: .gitignore  .pdm.toml  LICENSE  README.md  main.py  pw_migrate.py  pyproject.toml
config/: ep.yaml
cores/: BotEvent.py  announcement.py  archiveTalk.py  backend.py  ban.py  cacheCollection.py  errorHandler.py  groupMange.py  helper.py  sayaManage.py
cores/fastapi/: __init__.py
cores/fastapi/api/: __init__.py
cores/fastapi/api/group/: __init__.py
database/: README.md
migrations/: 001_auto.py  002_auto.py
modules/: BotEvent.py  MorningNight.py  acgPicture.py  achiveTalk.py  archiveTalk.py  backend.py  ban.py  helper.py  hito.py  keyWorldReply.py  makeItaQuote.py  randomAcgPicture.py  searchAcgPicture.py  status.py  tarot.py
modules/ill/: __init__.py
modules/moyu/: __init__.py  getHolidays.py
modules/sign/: __init__.py
source/css/: github.css  helpTemplate.css  maize.css
source/htmlTemplate/: common.html  dianTemplate.html  helpTemplate.html  mdTemplate.html  modulesList.html
source/ill/: data.json
source/tarot/: data.min.json
utils/: QQutils.py  control.py  hitokoto.py  picture.py  text.py  text2img.py
utils/browser/: __init__.py
utils/config/: __init__.py  config.py
utils/database/: __init__.py  db.py
utils/fastapiService/: __init__.py  responseModel.py  router.py
utils/messageTool/: __init__.py
