[project]
name = "yuki"
version = "0.1.0"
description = ""
authors = [
    {name = "zzzzz167", email = "2742400566@qq.com"},
    {name = "xiaozhizhen",email = "2742400566@qq.com"},
]
dependencies = [
    "graia-ariadne[full]<1.0.0,>=0.9.6",
    "graia-saya<1.0.0,>=0.0.16",
    "PyYAML<7.0,>=6.0",
    "peewee<4.0.0,>=3.14.9",
    "graia-scheduler<1.0.0,>=0.0.8",
    "psutil<6.0.0,>=5.9.0",
    "peewee-migrate<2.0.0,>=1.4.7",
    "imgkit<2.0.0,>=1.2.2",
    "Pillow<9.0.0,>=8.1.2",
    "fonttools<5.0.0,>=4.29.1",
    "beautifulsoup4<5.0.0,>=4.10.0",
    "lxml<5.0.0,>=4.8.0",
    "arclet-alconna[full]<2.0.0,>=1.1.2",
    "prompt-toolkit<4.0.0,>=3.0.29",
    "rich<13.0.0,>=12.4.1",
    "markdown<4.0.0,>=3.4.1",
    "jinja2<4.0.0,>=3.1.2",
    "playwright<2.0.0,>=1.25.1",
    "arclet-alconna-graia<1.0.0,>=0.8.0",
    "fastapi<1.0.0,>=0.85.1",
    "uvicorn[standard]<1.0.0,>=0.18.3",
    "orjson<4.0.0,>=3.8.0",
    "memray>=1.5.0",
]
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}

[project.urls]
